# Helios-Intercropping

./: .gitignore  README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements.txt  setup.py  verify.sh
docs/: API.md  USAGE.md
params/: faba_bean.xml
scripts/: generate_scene.py
src/intercropping/: __init__.py
src/intercropping/config/: __init__.py  constants.py  defaults.py
src/intercropping/core/: __init__.py  collision.py  context.py  scene.py
src/intercropping/geometry/: __init__.py  camera.py  plants.py  soil.py
src/intercropping/io/: __init__.py  export.py  metadata.py
src/intercropping/radiation/: __init__.py  imaging.py  properties.py  solar.py
src/intercropping/segmentation/: __init__.py  labels.py
src/intercropping/utils/: __init__.py  file_utils.py  texture_utils.py
src/intercropping/visualization/: __init__.py  renderer.py
tests/: __init__.py  test_geometry.py
