[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-intercropping"
version = "1.0.0"
description = "Photorealistic RGB/multispectral image generation for intercropping research"
readme = "README.md"
authors = [
    {name = "Nelson", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["pyhelios", "agriculture", "intercropping", "synthetic-data", "computer-vision"]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "opencv-python>=4.5.0",
    "Pillow>=8.3.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.6b0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]

[project.scripts]
helios-intercrop = "scripts.generate_scene:main"

[project.urls]
Homepage = "https://github.com/yourusername/helios-intercropping"
Documentation = "https://github.com/yourusername/helios-intercropping/docs"
Repository = "https://github.com/yourusername/helios-intercropping"
Issues = "https://github.com/yourusername/helios-intercropping/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
